--- a/W03-P/W03_회고.md
+++ b/W03-P/W03_회고.md
@@ -1,7 +1,7 @@
 ## 새로 배운 내용
 * 보안 문제 및 방지 대책 이해
     사용자가 입력한 정보는 일단 신뢰하지 않음 --> 검증 후 저장
-* ###SQL Injection
+### SQL Injection
 : 임의의 SQL문을 주입하고 실행하게 하여 DB가 비정상적인 동작을 하는 행위
 
 --> 입력 값을 문자열로 인식하여 공격쿼리가 들어가도 의미없는 단순 문자열로 처리
@@ -9,7 +9,7 @@
 mysqli_real_escape_string() // 인자로 들어온 데이터 중, SQL을 주입하는 공격에 사용될 수 있는 기호 -> 문자
 ```
 
-- ##UPDATE
+## UPDATE
 ```
 어떤 특정한 주제를 선택 -> 수정 // create를 눌렀을 때와 같은 화면, 내용 수정
 $query = "
@@ -22,7 +22,7 @@ $query = "
 ";
 ```
 
-- ##DELETE
+## DELETE
 ```
 어떤 특정한 주제를 선택 -> 삭제, 안전을 위해 submit과 같은 버튼
 
