--- a/W06-P/W06_회고.md
+++ b/W06-P/W06_회고.md
@@ -5,7 +5,7 @@
 SSH프로토콜을 이용하여 함호화된 통신세션을 컴퓨터 네트워크에 제공하는 컴퓨터 프로그램
 오픈소스
 ```
-- vi에디터에서 검색은 /는 내용
+- vi에디터에서 검색은 /찾는 내용
 - 샘플 DB구조
 ```
 MariaDB[none] // none --> DB선택 전
