--- a/W06-P/W06_회고.md
+++ b/W06-P/W06_회고.md
@@ -16,7 +16,7 @@ MariaDB[employees]> desc employees; // employess --> table
 ```
 select * from table limit 10 --> 데이터 수 10으로 제한
 ```
-- 짧은 php코드는 <?=$row['emp_no']?>처럼 실행문 내 혼합해서 사용 가능
+- 짧은 php코드는 ```<?=$row['emp_no']?>```처럼 실행문 내 혼합해서 사용 가능
 - readonly : click시 수정 안 됨 // 읽기만 
 
 
