--- a/W14-P/w14_회고.md
+++ b/W14-P/w14_회고.md
@@ -33,4 +33,7 @@ db.dropDatabase()
 딱히 없었다 !
 
 ## 회고
-mongoDB새로운 문법을 사용하니까 
+mongoDB도 그렇고, 새로운 문법을 사용하니까 낯설기도 하고 신기하기도 하다 !
+
+## 과제
+https://drive.google.com/drive/u/2/folders/1wIdvNANDJQQeb9sqv27sPT3ghRjR2l0g
